Fixed Applause button colors for Dark mode

--- a/src/assets/scss/base/_generic.scss
+++ b/src/assets/scss/base/_generic.scss
@@ -29,6 +29,7 @@ body.light {
     --hr: hsla(0, 0%, 0%, 0.2);
     --inlineCode-bg: rgba(255, 229, 100, 0.2);
     --inlineCode-text: #1a1a1a;
+    --applause-button: green;
 }
 
 body.dark {
@@ -41,6 +42,7 @@ body.dark {
     --hr: hsla(0, 0%, 100%, 0.2);
     --inlineCode-bg: hsl(222, 14%, 25%);
     --inlineCode-text: #e6e6e6;
+    --applause-button: #03bb85;
 }
 
 h1,
